--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "admin-lte": "^2.4.18",
         "bootstrap": "^4.3.1",
+        "icheck": "^1.0.2",
         "jquery": "^3.4.1"
     }
 }
